# pre-course-assignment

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run_workshop_01.sh
workshop01/: main.py
workshop01/templates/: index.html
