[tool.poetry]
name = "pre-course-assignment"
version = "0.1.0"
description = "This repository contains the pre-course assignment for the workshop."
authors = ["Lionel Teo <93119265+imda-lionelteo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
